<resources>
    <string name="app_name">LoginScreen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">New Register</string>
    <string name="Forget">Forget Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="FullName">Full Name</string>
    <string name="conformPassword">Conform Password</string>
    <string name="email">Email Id</string>
    <string name="create">Register</string>
</resources>
