<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rajan.loginscreen.SignUpActivity">



        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/FullName"
            android:gravity="center"
            android:background="@color/colorlightgrey"
            android:id="@+id/edtfull"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/Username"
            android:gravity="center"
            android:background="@color/colorlightgrey"
            android:id="@+id/edtuser"
            />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:hint="@string/password"
        android:gravity="center"
        android:background="@color/colorlightgrey"
        android:id="@+id/edtpass"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:hint="@string/conformPassword"
        android:gravity="center"
        android:background="@color/colorlightgrey"
        android:id="@+id/edtconf"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:hint="@string/email"
        android:gravity="center"
        android:background="@color/colorlightgrey"
        android:id="@+id/edtemail"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create"
        android:id="@+id/edtreg"
        />



</LinearLayout>
